Added has_index config option and added remove row functionality

--- a/templates/data_preparation/manual_repairing.html
+++ b/templates/data_preparation/manual_repairing.html
@@ -19,7 +19,7 @@
         <div class="col-6">
             <h3>Remove row:</h3>
             <div class="mt-1">
-                <label for="remove_row" class="form-label">Remove row number:</label>
+                <label for="remove_row" class="form-label">Remove row number (your index):</label>
                 <input type="number" class="form-control" name="remove_row" id="remove_row">
             </div>
             <button type="submit" class="btn btn-warning mt-3" name="submit_remove_row" value="true">Remove row number:</button>
