Add weird fixes to patch spaghetti code behaviour. Dont judge me, I am tired

--- a/templates/data_selection/import_new_dataset.html
+++ b/templates/data_selection/import_new_dataset.html
@@ -23,6 +23,10 @@
       <input type="checkbox" class="form-check-input" name="new_file_has_header" id="new_file_has_header">
       <label class="form-check-label" for="new_file_has_header">File has a header</label>
     </div>
+    <div class="form-check col-auto">
+      <input type="checkbox" class="form-check-input" name="new_file_has_index" id="new_file_has_index">
+      <label class="form-check-label" for="new_file_has_index">File has an index</label>
+    </div>
       <div class="col-auto">
         <input type="text" class="form-control" name="new_file_separator" id="new_file_separator" placeholder="Separator: Default --> ,">
       </div>
