Added basic setupfiltering

--- a/templates/base_template.html
+++ b/templates/base_template.html
@@ -74,6 +74,7 @@
                     <li><a class="dropdown-item" href="{{ url_for('data_preparation.adapt_file_configs')}}">adapt_file_configs</a></li>
                     <li><a class="dropdown-item" href="{{ url_for('data_preparation.capping')}}">capping</a></li>
                     <li><a class="dropdown-item" href="{{ url_for('data_preparation.transpose')}}">transpose</a></li>
+                    <li><a class="dropdown-item" href="{{ url_for('data_preparation.filtering')}}">filtering</a></li>
                     <li><a class="dropdown-item" href="{{ url_for('data_preparation.manual_repairing')}}">manual_repairing</a></li>
                     <li><a class="dropdown-item" href="{{ url_for('data_preparation.automatic_detection')}}">automatic_detection</a></li>
                     <li><a class="dropdown-item" href="#">anomaly_detection</a></li>
