--- a/templates/data_preparation/manual_repairing.html
+++ b/templates/data_preparation/manual_repairing.html
@@ -67,8 +67,8 @@
                     <option selected disabled value="None">None</option>
                     <option value="string">text (if not sure, choose this)</option>
                     <option value="datetime64">date</option>
-                    <option value="Int64">number (without flouting point)</option>
-                    <option value="Float64">number (with floating point)</option>
+                    <option value="Int64">number whole (without flouting point)</option>
+                    <option value="Float64">number decimal (with floating point)</option>
                     <option value="category">category</option>
                     <option value="object">object (default input type - change it)</option>
                 </select>
