--- a/templates/data_preparation/filtering.html
+++ b/templates/data_preparation/filtering.html
@@ -6,14 +6,14 @@
 <!-- My js for filtering -->
 {# <script src="{{ url_for('static', filename='js/filtering.js')}}" type="text/javascript"></script> #}
 
-{{additional_args[2]}}
+{# {{additional_args[1]}} #}
 
-<h3>Filtering per data type column</h3>
+{# <h1>Filtering per data type column</h3> #}
 <form action="#" method="POST" class="mb-3">
   <div class="row mb-3">
     <div class="row col-4">
         <h3>Filter text:</h3>
-        <select id="filter_column_category" name="filter_column_category" class="form-select m-2"  onchange="construct_new_graph(this.value)">
+        <select id="filter_column_category" name="filter_column_category" class="form-select m-2"  onchange="construct_new_graph(this.value, 'histogram')">
             <option selected value="None">None</option>
             {% if additional_args[2] %}
                 {% for key, value in additional_args[2].items() %}
@@ -30,7 +30,7 @@
     </div>
     <div class="row col-4">
         <h3>Filter date:</h3>
-        <select id="filter_column_date" name="filter_column_date" class="form-select m-2"  onchange="construct_new_graph(this.value)">
+        <select id="filter_column_date" name="filter_column_date" class="form-select m-2"  onchange="construct_new_graph(this.value, 'violin')">
             <option selected value="None">None</option>
             {% if additional_args[2] %}
                 {% for key, value in additional_args[2].items() %}
@@ -47,7 +47,7 @@
     </div>
     <div class="row col-4">
         <h3>Filter number whole:</h3>
-        <select id="filter_column_int" name="filter_column_int" class="form-select m-2"  onchange="construct_new_graph(this.value)">
+        <select id="filter_column_int" name="filter_column_int" class="form-select m-2"  onchange="construct_new_graph(this.value, 'violin')">
             <option selected value="None">None</option>
             {% if additional_args[2] %}
                 {% for key, value in additional_args[2].items() %}
@@ -64,7 +64,7 @@
     </div>
     <div class="row col-4">
         <h3>Filter number decimal:</h3>
-        <select id="filter_column_float" name="filter_column_float" class="form-select m-2"  onchange="construct_new_graph(this.value)">
+        <select id="filter_column_float" name="filter_column_float" class="form-select m-2"  onchange="construct_new_graph(this.value, 'violin')">
             <option selected value="None">None</option>
             {% if additional_args[2] %}
                 {% for key, value in additional_args[2].items() %}
@@ -81,7 +81,7 @@
     </div>
     <div class="row col-4">
         <h3>Filter category:</h3>
-        <select id="filter_column_category" name="filter_column_category" class="form-select m-2"  onchange="construct_new_graph(this.value)">
+        <select id="filter_column_category" name="filter_column_category" class="form-select m-2"  onchange="construct_new_graph(this.value, 'histogram')">
             <option selected value="None">None</option>
             {% if additional_args[2] %}
                 {% for key, value in additional_args[2].items() %}
