--- a/templates/data_preparation/filtering.html
+++ b/templates/data_preparation/filtering.html
@@ -6,34 +6,47 @@
 <!-- My js for filtering -->
 {# <script src="{{ url_for('static', filename='js/filtering.js')}}" type="text/javascript"></script> #}
 
-{# {{additional_args[1]}} #}
+{# {{additional_args[0]}}
+{{additional_args[3]}} #}
 
 {# <h1>Filtering per data type column</h3> #}
 <form action="#" method="POST" class="mb-3">
   <div class="row mb-3">
     <div class="row col-4">
         <h3>Filter text:</h3>
-        <select id="filter_column_category" name="filter_column_category" class="form-select m-2"  onchange="construct_new_graph(this.value, 'histogram')">
+        <select id="filter_column_string" name="filter_column_string" class="form-select m-2"  onchange="construct_new_graph(this.value, 'histogram')">
             <option selected value="None">None</option>
-            {% if additional_args[2] %}
-                {% for key, value in additional_args[2].items() %}
+            {% if additional_args[3] %}
+                {% for key, value in additional_args[3].items() %}
                     {% if value == "string" %}
-                        <option value="{{key}}">{{key}}</option>
+                        <option {% if request.form['filter_column_string'] == key %}selected{% endif %} value="{{key}}">{{key}}</option>
                     {% endif %}
                 {% endfor %}
             {% endif %}
         </select>
+        <div class="mb-3">
+            <label for="string_match" class="form-label">Match string</label>
+            <input type="text" class="form-control" name="string_match" id="string_match" placeholder="" value="{{ request.form[string_match] }}">
+        </div>
+        <div class="form-check col-auto">
+            <input checked type="checkbox" class="form-check-input" name="has_to_be_complete_match" id="has_to_be_complete_match">
+            <label class="form-check-label" for="has_to_be_complete_match">String matches completly</label>
+        </div>
+        <div class="form-check col-auto">
+            <input checked type="checkbox" class="form-check-input" name="delete_matches_string" id="delete_matches_string">
+            <label class="form-check-label" for="delete_matches_string">Delete matches (otherwise everything but matches)</label>
+        </div>
         <div class="row">
             <button type="submit" class="btn btn-info col-5 m-2" name="submit_filter_string_preview" value="true">Filter (preview)</button>
             <button type="submit" class="btn btn-warning col-5 m-2" name="submit_filter_string" value="true">Filter (permanent)</button>
         </div>
     </div>
-    <div class="row col-4">
+    {# <div class="row col-4">
         <h3>Filter date:</h3>
         <select id="filter_column_date" name="filter_column_date" class="form-select m-2"  onchange="construct_new_graph(this.value, 'violin')">
             <option selected value="None">None</option>
-            {% if additional_args[2] %}
-                {% for key, value in additional_args[2].items() %}
+            {% if additional_args[3] %}
+                {% for key, value in additional_args[3].items() %}
                     {% if value == "datetime64" %}
                         <option value="{{key}}">{{key}}</option>
                     {% endif %}
@@ -49,8 +62,8 @@
         <h3>Filter number whole:</h3>
         <select id="filter_column_int" name="filter_column_int" class="form-select m-2"  onchange="construct_new_graph(this.value, 'violin')">
             <option selected value="None">None</option>
-            {% if additional_args[2] %}
-                {% for key, value in additional_args[2].items() %}
+            {% if additional_args[3] %}
+                {% for key, value in additional_args[3].items() %}
                     {% if value == "Int64" %}
                         <option value="{{key}}">{{key}}</option>
                     {% endif %}
@@ -66,8 +79,8 @@
         <h3>Filter number decimal:</h3>
         <select id="filter_column_float" name="filter_column_float" class="form-select m-2"  onchange="construct_new_graph(this.value, 'violin')">
             <option selected value="None">None</option>
-            {% if additional_args[2] %}
-                {% for key, value in additional_args[2].items() %}
+            {% if additional_args[3] %}
+                {% for key, value in additional_args[3].items() %}
                     {% if value == "Float64" %}
                         <option value="{{key}}">{{key}}</option>
                     {% endif %}
@@ -78,19 +91,31 @@
             <button type="submit" class="btn btn-info col-5 m-2" name="submit_filter_float_preview" value="true">Filter (preview)</button>
             <button type="submit" class="btn btn-warning col-5 m-2" name="submit_filter_float" value="true">Filter (permanent)</button>
         </div>
-    </div>
+    </div> #}
     <div class="row col-4">
         <h3>Filter category:</h3>
         <select id="filter_column_category" name="filter_column_category" class="form-select m-2"  onchange="construct_new_graph(this.value, 'histogram')">
             <option selected value="None">None</option>
-            {% if additional_args[2] %}
-                {% for key, value in additional_args[2].items() %}
+            {% if additional_args[3] %}
+                {% for key, value in additional_args[3].items() %}
                     {% if value == "category" %}
-                        <option value="{{key}}">{{key}}</option>
+                        <option {% if request.form['category'] == key %}selected{% endif %} value="{{key}}">{{key}}</option>
                     {% endif %}
                 {% endfor %}
             {% endif %}
         </select>
+        <div class="mb-3">
+            <label for="category_match" class="form-label">Match Category</label>
+            <input type="text" class="form-control" name="category_match" id="category_match" placeholder="" value="{{ request.form[category_match] }}">
+        </div>
+        <div class="form-check col-auto">
+            <input checked type="checkbox" class="form-check-input" name="delete_matches_category" id="delete_matches_category">
+            <label class="form-check-label" for="delete_matches_category">Delete matches (otherwise everything but matches)</label>
+        </div>
+        <div class="form-check col-auto" style="visibility: hidden;">
+            <input checked type="checkbox" class="form-check-input">
+            <label class="form-check-label">Css go brrrrrrrrr</label>
+        </div>
         <div class="row">
             <button type="submit" class="btn btn-info col-5 m-2" name="submit_filter_category_preview" value="true">Filter (preview)</button>
             <button type="submit" class="btn btn-warning col-5 m-2" name="submit_filter_category" value="true">Filter (permanent)</button>
