--- a/templates/data_preparation/manual_repairing.html
+++ b/templates/data_preparation/manual_repairing.html
@@ -28,7 +28,7 @@
                 <label for="remove_row" class="form-label">Remove row number (your index):</label>
                 <input type="number" class="form-control" name="remove_row" id="remove_row">
             </div>
-            <button type="submit" class="btn btn-warning mt-3" name="submit_remove_row" value="true">Remove row number:</button>
+            <button type="submit" class="btn btn-warning mt-3" name="submit_remove_row" value="true">Remove row number</button>
         </div>
         <div class="col-6">
             <h3>Remove column:</h3>
@@ -43,7 +43,7 @@
                     {% endif %}
                 </select>
             </div>
-            <button type="submit" class="btn btn-warning mt-3" name="submit_remove_column" value="true">Remove column:</button>
+            <button type="submit" class="btn btn-warning mt-3" name="submit_remove_column" value="true">Remove column</button>
         </div>
         <div class="col-6">
             <h3>Set column type:</h3>
@@ -74,7 +74,31 @@
                 </select>
             </div>
         </div>
-        <button type="submit" class="btn btn-info m-2 mt-3" name="submit_change_column_type" value="true">Change column type:</button>
+        <button type="submit" class="btn btn-info m-2 mt-3" name="submit_change_column_type" value="true">Change column type</button>
+    </div>
+    <div class="col-6 row">
+        <div class="col-6">
+            <h3>Change column name:</h3>
+            <div class="mt-1">
+                <label for="change_column_name" class="form-label">Current column name</label>
+                <select id="change_column_name" name="change_column_name" class="form-select">
+                    <option selected>None</option>
+                    {% if additional_args[0] %}
+                        {% for column_name in additional_args[0][0].keys() %}
+                            <option {% if request.form['change_column_name']==column_name %}selected{% endif %}>{{column_name}}</option>
+                        {% endfor %}
+                    {% endif %}
+                </select>
+            </div>
+        </div>
+        <div class="col-6">
+            <h3 style="visibility: hidden;">CSS go brrrrr</h3>
+            <div class="mt-1">
+                <label for="new_column_name" class="form-label">New column name:</label>
+                <input type="text" class="form-control" name="new_column_name" id="new_column_name">
+            </div>
+        </div>
+        <button type="submit" class="btn btn-info m-2 mt-3" name="submit_change_column_name" value="true">Change column name</button>
     </div>
   </div>
 </form>
