--- a/templates/base_template.html
+++ b/templates/base_template.html
@@ -76,6 +76,7 @@
                     <li><a class="dropdown-item" href="{{ url_for('data_preparation.transpose')}}">transpose</a></li>
                     <li><a class="dropdown-item" href="{{ url_for('data_preparation.capping')}}">capping</a></li>
                     <li><a class="dropdown-item" href="{{ url_for('data_preparation.filtering')}}">filtering</a></li>
+                    <li><a class="dropdown-item" href="{{ url_for('data_preparation.missing_values')}}">missing_values</a></li>
                     <li><a class="dropdown-item" href="{{ url_for('data_preparation.automatic_detection')}}">automatic_detection</a></li>
                     <li><a class="dropdown-item" href="#">anomaly_detection</a></li>
                     <li><a class="dropdown-item" href="#">normalisation</a></li>
