--- a/templates/data_preparation/missing_values.html
+++ b/templates/data_preparation/missing_values.html
@@ -6,35 +6,49 @@
 <!-- My js for filtering -->
 {# <script src="{{ url_for('static', filename='js/filtering.js')}}" type="text/javascript"></script> #}
 
-{# {{additional_args[0]}}
-{{additional_args[3]}} #}
-
-{# <h1>Filtering per data type column</h3> #}
 <form action="#" method="POST" class="mb-3">
-  <div class="row mb-3">
-    <div class="row col-4">
-        <label for="missing_value_handling_option" class="form-label">Missing values handling options:</label>
-        <select id="missing_value_handling_option" name="missing_value_handling_option" class="form-select m-2">
-            <option selected value="None">None</option>
-            <option {% if request.form['missing_value_handling_option'] == 'delete' %}selected{% endif %} value="delete">Delete</option>
-            <option {% if request.form['missing_value_handling_option'] == 'substitute' %}selected{% endif %} value="substitute">Substitute with mean/most frequent</option>
-            <option {% if request.form['missing_value_handling_option'] == 'predict' %}selected{% endif %} value="predict">Predict (with machine learning model)</option>
-            <option {% if request.form['missing_value_handling_option'] == 'impute' %}selected{% endif %} value="impute">Impute (with nearest similiar datasets)</option>
-        </select>
-        <div class="form-check col-auto">
-            <input checked type="checkbox" class="form-check-input" name="handle_numbers" id="handle_numbers">
-            <label class="form-check-label" for="handle_numbers">Handle numbers</label>
-        </div>
-        <div class="form-check col-auto">
-            <input checked type="checkbox" class="form-check-input" name="handle_categories" id="handle_categories">
-            <label class="form-check-label" for="handle_categories">Handle categories</label>
-        </div>
-    </div>
-    <div class="row col-4">
-    </div>
     <div class="row">
-        <button type="submit" class="btn btn-info col-5 m-2" name="submit_handle_missing_values_preview" value="true">Use settings on missing values (preview)</button>
-        <button type="submit" class="btn btn-warning col-5 m-2" name="submit_handle_missing_values" value="true">Use settings on missing values</button>
+        <div class="row col-6 mb-5">
+            <div class="mb-1">
+                <label for="new_missing_value_string" class="form-label">Add text to missing values (e.g. 'Not available' could then be classified as None)</label>
+                <input type="text" class="form-control" name="new_missing_value_string" id="new_missing_value_string" placeholder="">
+            </div>
+            <button type="submit" class="btn btn-success col-5 m-2" name="submit_add_na_value_type" value="true">Add to missing values</button>
+        </div>
+        {# <div class="col-2">
+        </div> #}
+        <div class="col-4">
+            <h3>Current additional missing values:</h3>
+            <select class="form-select m-2">
+                {% for na_value in additional_args[3] %}
+                    <option>{{na_value}}</li>
+                {% endfor %}
+            </select>
+        </div>
+        <div class="row mb-3">
+            <div class="row col-4">
+                <label for="missing_value_handling_option" class="form-label">Missing values handling options:</label>
+                <select id="missing_value_handling_option" name="missing_value_handling_option" class="form-select m-2">
+                    <option selected value="None">None</option>
+                    <option {% if request.form['missing_value_handling_option'] == 'delete' %}selected{% endif %} value="delete">Delete</option>
+                    <option {% if request.form['missing_value_handling_option'] == 'substitute' %}selected{% endif %} value="substitute">Substitute with mean/most frequent</option>
+                    <option {% if request.form['missing_value_handling_option'] == 'predict' %}selected{% endif %} value="predict">Predict (with machine learning model)</option>
+                    <option {% if request.form['missing_value_handling_option'] == 'impute' %}selected{% endif %} value="impute">Impute (with nearest similiar datasets)</option>
+                </select>
+                <div class="form-check col-auto">
+                    <input checked type="checkbox" class="form-check-input" name="handle_numbers" id="handle_numbers">
+                    <label class="form-check-label" for="handle_numbers">Handle numbers</label>
+                </div>
+                <div class="form-check col-auto">
+                    <input checked type="checkbox" class="form-check-input" name="handle_categories" id="handle_categories">
+                    <label class="form-check-label" for="handle_categories">Handle categories</label>
+                </div>
+            </div>
+            <div class="row">
+                <button type="submit" class="btn btn-info col-5 m-2" name="submit_handle_missing_values_preview" value="true">Use settings on missing values (preview)</button>
+                <button type="submit" class="btn btn-warning col-5 m-2" name="submit_handle_missing_values" value="true">Use settings on missing values</button>
+            </div>
+        </div>
     </div>
 </form>
 
