Changed header of filtering and missng values

--- a/templates/data_preparation/filtering.html
+++ b/templates/data_preparation/filtering.html
@@ -1,6 +1,6 @@
 {% extends "base_template.html" %}
 
-{% block title %}Data preparation - Manual repairing{% endblock %}
+{% block title %}Data preparation - Filtering{% endblock %}
 {% block main_content %}
 
 <!-- My js for filtering -->
