--- a/templates/data_preparation/missing_values.html
+++ b/templates/data_preparation/missing_values.html
@@ -1,6 +1,6 @@
 {% extends "base_template.html" %}
 
-{% block title %}Data preparation - Manual repairing{% endblock %}
+{% block title %}Data preparation - Missing values{% endblock %}
 {% block main_content %}
 
 <h3>Handle missing value configs of the dataframe:</h3>
