--- a/templates/base_template.html
+++ b/templates/base_template.html
@@ -77,7 +77,7 @@
                     <li><a class="dropdown-item" href="{{ url_for('data_preparation.capping')}}">capping</a></li>
                     <li><a class="dropdown-item" href="{{ url_for('data_preparation.filtering')}}">filtering</a></li>
                     <li><a class="dropdown-item" href="{{ url_for('data_preparation.missing_values')}}">missing_values</a></li>
-                    <li><a class="dropdown-item" href="{{ url_for('data_preparation.encoding_and_extracting')}}">encoding_and_extracting</a></li>
+                    <li><a class="dropdown-item" href="{{ url_for('data_preparation.encoding_extracting_duplicates')}}">encoding_extracting_duplicates</a></li>
                     <li><a class="dropdown-item" href="{{ url_for('data_preparation.automatic_detection')}}">automatic_detection</a></li>
                     {# <li><a class="dropdown-item" href="#">anomaly_detection</a></li>
                     <li><a class="dropdown-item" href="#">normalisation</a></li> #}
