--- a/templates/data_preparation/encoding_extracting_duplicates.html
+++ b/templates/data_preparation/encoding_extracting_duplicates.html
@@ -1,6 +1,6 @@
 {% extends "base_template.html" %}
 
-{% block title %}Data preparation - Encoding and Extracting{% endblock %}
+{% block title %}Data preparation - Encoding, extracting and duplicates{% endblock %}
 {% block main_content %}
 
 <!-- My js for display_table -->
